2005-08-26 Braden McDaniel  <braden@endoframe.com>

	Implemented openvrml::browser::create_from_from_url.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* tests/Makefile.am:  Removed test program
	tests/browser_create_vrml_from_stream; added tests/browser.
	* tests/browser.cpp:  Added file.  Boost-based test suite for
	openvrml::browser.  Currently tests
	openvrml::browser::create_vrml_from_stream and
	openvrml::browser::create_vrml_from_url.
	* tests/browser_create_vrml_from_stream.cpp:  Removed file.
	Obsoleted by tests/browser.cpp.

2005-08-17 Braden McDaniel  <braden@endoframe.com>

	Removed obsolete lookat project for Microsoft Visual Studio.
	Added sdl-viewer project for Microsoft Visual Studio.  Require
	one of OPENVRML_BUILD_LIB, OPENVRML_USE_LIB, OPENVRML_BUILD_DLL,
	or OPENVRML_USE_DLL to be defined when building the openvrml
	library.  Require one of OPENVRML_GL_BUILD_LIB,
	OPENVRML_GL_USE_LIB, OPENVRML_BUILD_DLL, or OPENVRML_USE_DLL to
	be defined when building the openvrml-gl library.

	* examples/sdl_viewer.cpp
	* ide-projects/Windows/VisualC7_1/OpenVRML/OpenVRML.sln
	* ide-projects/Windows/VisualC7_1/OpenVRML/lookat/lookat.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml-config.h
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj:
	Added file.
	* src/libopenvrml/openvrml-common.h
	* src/libopenvrml-gl/openvrml-gl-common.h

2005-08-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Removed obsolete code.

2005-08-15 Braden McDaniel  <braden@endoframe.com>

	Fixes to build with Microsoft Visual C++ 7.1.

	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml-config.h:
	Added file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl-config.h:
	Added file.