@@ -21,8 +21,8 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Zm400"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\..\src\libopenvrml;..\..\..\..\..\lib\antlr;..\..\..\..\..\lib\regex;."
-				PreprocessorDefinitions="WIN32;PACKAGE_VERSION=\&quot;0.15.99\&quot;;OPENVRML_BUILD_LIB"
+				AdditionalIncludeDirectories="..\..\..\..\..\src\libopenvrml;..\..\..\..\..\lib\antlr;."
+				PreprocessorDefinitions="WIN32;BOOST_SPIRIT_THREADSAFE;PACKAGE_VERSION=\&quot;0.15.99\&quot;;OPENVRML_BUILD_LIB"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -70,8 +70,8 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
-				AdditionalIncludeDirectories="..\..\..\..\..\src\libopenvrml;..\..\..\..\..\lib\antlr;..\..\..\..\..\lib\regex;."
-				PreprocessorDefinitions="WIN32;NDEBUG;PACKAGE_VERSION=\&quot;0.15.99\&quot;;OPENVRML_BUILD_LIB"
+				AdditionalIncludeDirectories="..\..\..\..\..\src\libopenvrml;..\..\..\..\..\lib\antlr;."
+				PreprocessorDefinitions="WIN32;BOOST_SPIRIT_THREADSAFE;NDEBUG;PACKAGE_VERSION=\&quot;0.15.99\&quot;;OPENVRML_BUILD_LIB"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="TRUE"
